--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -116,7 +116,7 @@
 }
 
 .features__title{
-  font-size: 1.6rem;
+  /* font-size: 1.6rem; */
   color: var(--clr-primary-300);
 }
 
@@ -164,7 +164,7 @@
     border-radius: 30px;
   }
   .stats__title{
-    font-size: 1.8rem;
+    font-size: 1.6rem;
     text-align: left;
   }
 
@@ -191,4 +191,12 @@
   
   .stats__value{
     font-size: 2rem;
+}
+
+
+/* FAQ */
+
+.faq{
+    width: min(600px, 100%);
+    margin: 0 auto;
 }
