--- a/src/index.css
+++ b/src/index.css
@@ -261,6 +261,31 @@ section{
   cursor: pointer;
 }
 
+/* Card cta */
+.card-cta{
+  width: min(800px, 100%);
+  background-color: var(--clr-primary-400);
+  border-radius: 30px;
+  margin: 0 auto;
+  text-align: center;
+  color: var(--clr-neutral-900);
+  padding: 2rem;
+}
+.card-cta__title{
+  font-size: 2rem;
+}
+.card-cta__btn{
+  background-color: var(--clr-neutral-100);
+  color: var(--clr-neutral-900);
+  padding: .8rem 1.6rem;
+  border-radius: 30px;
+}
+
+.card-cta__btn:hover{
+  background-color: var(--clr-neutral-900);
+  color: var(--clr-neutral-100);
+  cursor: pointer;
+}
 /**************************/
 /* HEADER */
 /**************************/
