--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -113,6 +113,7 @@
     align-items: center;
     position: relative;
     color: var(--clr-primary-300);
+    margin-bottom: 3.5em;
 }
 
 .features__title{
